# manage.scrypted.app

./: CLEANUP_ACTION_ITEMS.md  DOCUMENTATION_INDEX.md  FINAL_CLEANUP_PLAN.md  PROGRESS_REPORT_TASK_8_FINAL_CLEANUP.md  PR_CLEANUP_PROGRESS.md  README.md  SECURITY.md  cleanup-prs.sh  package-lock.json  package.json
.github/: CODEOWNERS  MERGE_PLAN.md  dependabot.yml  labels.yml  pull_request_template.md
CLAUDE_AUDIT_FIX/: 1_AUDIT_REPORT.md  3_CLEANUP_SUMMARY.md  6_QUICK_MANUAL_CLEANUP.md  CODEQL_SCORECARD_RESULTS.md  COMBINE_PR7_PR12_GUIDE.md  DOCUMENTATION_INDEX-2.md  DOCUMENTATION_INDEX.md  MAJOR_UPGRADES_TEST_PLAN.md  PROGRESS_REPORT_TASKS_1-4.md  PROGRESS_REPORT_TASKS_5-7.md  REBASE_PR9_GUIDE.md  REBASE_PR9_QUICK.sh  TASK_PROGRESS_SUMMARY.md
Caddy/: Caddyfile  docker-compose.yml  package.json
Development IoT-Dashboard/: AUDIT-SUMMARY-2026-05-19.md
agent-harness/: package-lock.json  package.json
docs/: AUDIT-REVIEW-OF-AGENTS-2026-05-19.md  DEVELOPER-INTEGRATION-STARTER-2026-05-19.md  DEVELOPER-REALITY-CLARIFICATION-2026-05-19.md  DOCKER-CADDY-OPS-NOTES.md  FORK-OPERATING-MODEL-2026-05-19.md  HANDOFF-GO-NO-GO-CHECKLIST.md  INDEX.md  IOT-DASHBOARD-INTEGRATION-BOUNDARY-2026-05-19.md  MAINLINE-REALITY-CHECK-2026-05-19.md  MERGE-RUNBOOK-2026-05-18.md  PHASE1-BACKUP-ROLLBACK-DRILL-2026-05-19.md  PHASE2-OWNERS-SIGNOFF-2026-05-19.md  (+9 more)
server-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
server-app-tauri/src-tauri/capabilities/: default.json
server-app-tauri/src-tauri/icons/: icon.icns
server-app-tauri/src-tauri/src/: docker.rs  lib.rs  main.rs  net.rs  pty.rs
(+65 files in other folders)
