[package]
name = "scrypted-server-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "scrypted_server_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-shell = "2"
bollard            = "0.17"
portable-pty       = "0.8"
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
futures-util       = "0.3"
local-ip-address   = "0.6"
uuid               = { version = "1", features = ["v4"] }
dashmap            = "6"
lazy_static        = "1"

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1
panic        = "abort"
strip        = true
